@@ -1,15 +1,15 @@
 #source: tlstoc.s
 #as: -a64
-#ld: tmpdir/libtlslib.so
+#ld: -melf64ppc tmpdir/libtlslib.so
 #objdump: -sj.got
 #target: powerpc64*-*-*
 
 .*: +file format elf64-powerpc
 
 Contents of section \.got:
-.* (00000000|c0850110) (100185c0|00000000) 00000000 00000000  .*
+.* 00000000 10018570 00000000 00000000  .*
 .* 00000000 00000000 00000000 00000000  .*
-.* 00000000 00000000 (00000000|01000000) (00000001|00000000)  .*
-.* 00000000 00000000 (00000000|01000000) (00000001|00000000)  .*
-.* 00000000 00000000 (ffffffff|5080ffff) (ffff8050|ffffffff)  .*
+.* 00000000 00000000 00000000 00000001  .*
+.* 00000000 00000000 00000000 00000001  .*
+.* 00000000 00000000 ffffffff ffff8050  .*
 .* 00000000 00000000                    .*
