@@ -1,3 +1,8 @@
+2006-05-10  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-powerpc/tlsexetoc.r: Update for correction to tls optimization.
+	* ld-powerpc/tlsexetoc.g: Likewise.
+
 2006-05-02  Paul Brook  <paul@codesourcery.com>
 
 	* ld-arm/arm-elf.exp: Add thumb-rel32.
